tests/unit-fail-compilation/j009f.ref
j009f.c:6:7: error: Trying to look up identifier x, but no such identifier is in scope.
  Syntax error (SE-CID1). See C11 sec. 6.5.1:2
Translation failed (config dumped). Run kcc -d j009f.c to see commands run.
